# New_office

./: AGENT_THINKING_STEPS.md  AUTO_GENERATE_WORD_FIX.md  BATCH_PROCESSING_GUIDE.md  BIG_DATA_PROCESSING.md  BIG_MODEL_TOOL_WORKFLOW.md  README.md  pyproject.toml  requirements.txt  sample_large_excel_data.py  setup_mcp.py  word_mcp_server.py
file/: New_office.code-workspace  README.md  generate_excel_sample.py  requirements.txt  run.bat  run.sh  sample_large_excel_data.xlsx
office_word_mcp_server/: __init__.py
python/cryptography-45.0.5.dist-info/: RECORD
python/cyclopts-3.22.2.dist-info/: RECORD
python/docutils-0.21.2.dist-info/: RECORD
python/docx2pdf-0.1.8.dist-info/: RECORD
python/email_validator-2.2.0.dist-info/: RECORD
python/fastmcp-2.10.5.dist-info/: RECORD
python/jsonschema-4.24.0.dist-info/: RECORD
python/markdown_it_py-3.0.0.dist-info/: RECORD
python/mcp-1.11.0.dist-info/: RECORD
python/msoffcrypto_tool-5.4.2.dist-info/: METADATA  RECORD
python/pygments-2.19.2.dist-info/: RECORD
python/pyperclip-1.9.0.dist-info/: RECORD
python/python_dotenv-1.1.1.dist-info/: RECORD
python/rich_rst-1.3.1.dist-info/: RECORD
python/tqdm-4.67.1.dist-info/: RECORD
python/uvicorn-0.35.0.dist-info/: RECORD
word_document_server/: __init__.py  main.py
word_document_server/core/: __init__.py  footnotes.py  protection.py  styles.py  tables.py  unprotect.py
word_document_server/tools/: __init__.py  batch_content_tools.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  image_extraction_tools.py  (+1 more)
(+4 files in other folders)
