[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "office-word-mcp-server"
version = "1.1.7"
description = "MCP server for manipulating Microsoft Word documents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GongRzhe", email = "gongrzhe@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    # 核心依赖
    "python-docx>=1.1.2",
    "fastmcp>=2.8.1",
    
    # 文件处理和上传
    "paramiko>=3.0.0",
    "requests>=2.28.0",
    
    # 文档处理
    "msoffcrypto-tool>=5.4.2",
    "docx2pdf>=0.1.8",
    
    # XML和图片处理（python-docx依赖）
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
    
    # 类型提示支持
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/GongRzhe/Office-Word-MCP-Server.git"
"Bug Tracker" = "https://github.com/GongRzhe/Office-Word-MCP-Server.git/issues"

[tool.hatch.build.targets.wheel]
only-include = [
    "word_document_server",
    "office_word_mcp_server",
]
sources = ["."]

[project.scripts]
word_mcp_server = "word_document_server.main:run_server"

# 文本清理依赖：re为Python标准库，无需额外安装
